# server

./: .gitignore  CMakeLists.txt  README  version.tmpl
accelerator/: accelerator.cpp
accelerator/ogl/image/: image_kernel.cpp  image_kernel.h  image_mixer.cpp
build-scripts/: build-macos-xcode.sh
common/: blocking_bounded_queue_adapter.h  executor.h  future_fwd.h  memory.h  tweener.h
core/consumer/: frame_consumer.cpp  frame_consumer.h
core/diagnostics/: call_context.h
core/frame/: frame_timecode.h  frame_transform.h  geometry.cpp  geometry.h
core/producer/: frame_producer.cpp  frame_producer.h
core/producer/text/: text_producer.cpp
dependencies64/: .gitignore
dependencies64/cef/macos/: README.txt
modules/decklink/consumer/: decklink_consumer.cpp
modules/decklink/linux_interop/: LinuxCOM.h
modules/decklink/producer/: decklink_producer.cpp
modules/ffmpeg/: ffmpeg_error.cpp
modules/ffmpeg/consumer/: ffmpeg_consumer.cpp
modules/ffmpeg/producer/: ffmpeg_producer.cpp
modules/ffmpeg/producer/muxer/: frame_muxer.cpp  frame_muxer.h
modules/html/producer/: html_producer.cpp
modules/image/producer/: image_producer.cpp
modules/oal/: CMakeLists.txt
modules/reroute/producer/: channel_producer.cpp  channel_producer.h  layer_producer.cpp  layer_producer.h  reroute_producer.cpp
protocol/cii/: CIIProtocolStrategy.h
protocol/osc/: client.cpp
protocol/util/: tokenize.h
src/: CMakeLists.txt
src/CMakeModules/: Bootstrap_Linux.cmake  Bootstrap_Macos.cmake  Bootstrap_Windows.cmake
src/accelerator/: CMakeLists.txt  accelerator.cpp
src/accelerator/metal/image/: fragment.metal  image_mixer.h  image_mixer.mm  image_shader.mm  vertex.metal
src/accelerator/metal/util/: device.h  device.mm  shader.h  shader.mm  texture.h  texture.mm
src/accelerator/ogl/util/: device.cpp
src/common/: CMakeLists.txt  base64.cpp  env.cpp  tweener.cpp
src/common/metal/: metal_check.h
src/common/os/linux/: thread.cpp
src/core/: packages.config
src/core/mixer/: mixer.cpp
src/core/producer/route/: route_producer.cpp
src/modules/decklink/: decklink_api.h  packages.config
src/modules/decklink/producer/: decklink_producer.cpp
src/modules/ffmpeg/producer/: av_input.cpp  av_producer.cpp  av_producer.h  ffmpeg_producer.cpp
src/modules/ffmpeg/util/: av_util.cpp  av_util.h
src/modules/flash/util/: swf.cpp
src/modules/html/: CMakeLists.txt  html.cpp  packages.config  render_application.h
src/modules/image/: packages.config
src/modules/image/util/: image_algorithms.cpp
src/modules/newtek/consumer/: newtek_ndi_consumer.cpp
src/modules/newtek/producer/: newtek_ndi_producer.cpp
src/modules/oal/: CMakeLists.txt
src/modules/oal/consumer/: oal_consumer.cpp
src/modules/screen/: CMakeLists.txt  packages.config
src/modules/screen/consumer/: screen_consumer.cpp  screen_consumer.h
src/modules/screen/consumer/metal/: metal_screen_consumer.h  metal_screen_consumer.mm
src/modules/screen/consumer/ogl/: ogl_screen_consumer.cpp  ogl_screen_consumer.h
src/protocol/osc/: client.cpp
src/shell/: CMakeLists.txt  casparcg.config  macos_event_loop.h  macos_event_loop.mm  macos_helper.cpp  macos_specific.cpp  main.cpp  packages.config
tools/macos/: build.sh
